# Roguelike

./: .gitignore  README.md  pyproject.toml
cellcrawler/: runtime.py
cellcrawler/character/: character.py  character_command.py  character_hp_bar.py  command_builder.py  commands.py  mob.py  mob_factory.py  mob_strategy.py  movement_command.py  player.py  standard_mob_factory.py
cellcrawler/character/mobs/: doppelganger.py
cellcrawler/cli/: __main__.py
cellcrawler/core/: environment.py  roguelike_calc_tree.py
cellcrawler/gui/: keybind_panel.py
cellcrawler/inventory/: datastore.py  gui.py
cellcrawler/inventory/items/: fear_amulet.py  poisonous_helmet.py  speed_amulet.py  stunning_armor.py
cellcrawler/level/: level_manager.py  mob_manager.py  random_init_spawn_constructor.py
cellcrawler/lib/: base.py  calculation_tree.py  debug_utils.py  managed_node.py  model_repository.py  observable_utils.py  p3d_utils.py
cellcrawler/maze/: block_factory.py  blockpos_utils.py  const_level_factory.py  level_factory.py  maze_data.py  random_dfs_level_factory.py  random_rooms_level_factory.py  standard_block_factory.py
cellcrawler/maze/pathfinding/: character_pathfinding.py  pathfinding.py  repeated_pathfinder.py
diagrams/: architectural-drivers.md  classes-characters.uml  classes-gameplay.uml  classes-worldgen.uml  components.uml  sequence.uml  states.uml  usecase.uml
resources/maps/: tutorial.ccw
resources/models/: targets.yml
resources/models/built/characters/: beam.bam  player.bam
resources/models/built/gui/: elements.bam  items.bam
resources/models/built/world/: wall.bam
resources/models/input/characters/beam/: beam.blend
resources/models/input/characters/player/: player.blend
resources/models/input/world/wall/: model-config.yml  wall.blend
tests/: test_compositors.py  test_maze.py  test_nodepaths.py
